--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ self.managedObjectContext = [coreDataStore managedObjectContext];
  // now you can make a call to save: on your managed object context
 </code></pre>
 </li>
-<li>Creating NSManagedObject subclasses for your entities is highly recommended for convenience. You can add an init method in each subclass and include the ID assignment line from above. This way you don&rsquo;t have to remember to do it each time you create a new object!</li>
+<li>Creating an NSManagedObject subclass for each of your entities is highly recommended for convenience. You can add an init method to each subclass and include the ID assignment line from above &ndash; then you don&rsquo;t have to remember to do it each time you create a new object!</li>
 </ol>
 
 
