--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 
 <p>Wherever you plan to use StackMob, add <code>#import "StackMob.h"</code> to the header file.</p>
 
-<p>Create a variable of class <code>SMClient</code>, most likely in your AppDelegate file where you initialize other application wide variables, and initalize it like this:</p>
+<p>Create a variable of class <code>SMClient</code>, most likely in your AppDelegate file where you initialize other application wide variables, and initialize it like this:</p>
 
-<pre><code>// Assuming your variable is decalred SMClient *client;
+<pre><code>// Assuming your variable is declared SMClient *client;
 client = [[SMClient alloc] initWithAPIVersion:&lt;api_version&gt; publicKey:&lt;public_key&gt;];
 </code></pre>
 
