--- a/Classes/SMOAuth2Client.html
+++ b/Classes/SMOAuth2Client.html
@@ -188,7 +188,7 @@
 </li><li>
 	<span class="tooltip">
 		<code><a href="#//api/name/hasValidCredentials">&ndash;&nbsp;hasValidCredentials</a></code>
-		<span class="tooltip"><p>Returns whether the client has non-nil values for both the accesToken and macKey.</p></span>
+		<span class="tooltip"><p>Returns whether the client has non-nil values for both the accessToken and macKey.</p></span>
 	</span>
 	
 	
@@ -461,7 +461,7 @@
 	
 	
 	<div class="method-subsection brief-description">
-		<p>Returns whether the client has non-nil values for both the accesToken and macKey.</p>
+		<p>Returns whether the client has non-nil values for both the accessToken and macKey.</p>
 	</div>		
 	
     
