--- a/Classes/SMClient.html
+++ b/Classes/SMClient.html
@@ -338,7 +338,7 @@ self.managedObjectContext = [coreDataStore managedObjectContext];
 
 <h3>The User Schema</h3>
 
-<p>When you create an application on StackMob, a <strong>user</strong> schema is automatically generated, with <strong>username</strong> as it&rsquo;s primary key field as well as a <strong>password</strong> field. This is the default schema used for user authentication.</p>
+<p>When you create an application on StackMob, a <strong>user</strong> schema is automatically generated, with <strong>username</strong> as it&rsquo;s primary key field as well as a <strong>password</strong> field. This is the default schema for user objects.</p>
 
 <p>When you initialize an <code>SMClient</code> with <a href="#//api/name/initWithAPIVersion:publicKey:">initWithAPIVersion:publicKey:</a>, the following defaults are set:</p>
 
@@ -361,6 +361,8 @@ self.managedObjectContext = [coreDataStore managedObjectContext];
 <li><p>Alternatively, you can set all the properties at once using <a href="#//api/name/initWithAPIVersion:apiHost:publicKey:userSchema:userIdName:passwordFieldName:">initWithAPIVersion:apiHost:publicKey:userSchema:userIdName:passwordFieldName:</a>.</p></li>
 </ul>
 
+
+<p><strong>Important:</strong> Don&rsquo;t forget to check <strong>Create as a User Object</strong> when <a href="https://www.stackmob.com/platform/api/schemas/create" target="_blank">creating a new schema</a> for user objects.</p>
 
 <h2>Facebook Authentication</h2>
 
