--- a/Classes/SMClient.html
+++ b/Classes/SMClient.html
@@ -362,7 +362,7 @@ self.managedObjectContext = [coreDataStore managedObjectContext];
 </ul>
 
 
-<p><strong>Important:</strong> Don&rsquo;t forget to check <strong>Create as a User Object</strong> when <a href="https://www.stackmob.com/platform/api/schemas/create" target="_blank">creating a new schema</a> for user objects.</p>
+<p><strong>Important:</strong> Don&rsquo;t forget to check the <strong>Create as a User Object</strong> box when <a href="https://www.stackmob.com/platform/api/schemas/create" target="_blank">creating a new schema</a> for user objects.</p>
 
 <h2>Facebook Authentication</h2>
 
